exports[`test should mount an open modal 1`] = `
<ModalDialogDismiss>
  <Button
    className="terra-ModalDialog-header-dismiss"
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isReversed={false}
    variant="link">
    <button
      aria-disabled={false}
      className="terra-Button terra-Button--link terra-ModalDialog-header-dismiss"
      disabled={false}>
      <IconClose
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg">
        <IconBase
          ariaLabel={null}
          data-name="Layer 1"
          focusable={false}
          height="1em"
          isBidi={false}
          isSpin={false}
          viewBox="0 0 48 48"
          width="1em"
          xmlns="http://www.w3.org/2000/svg">
          <svg
            aria-hidden="true"
            className="terra-Icon"
            data-name="Layer 1"
            focusable={false}
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg">
            <path
              d="M28.2 24L42.9 9.1 40.8 7l-1.7-1.6-.4-.5L24 19.7 9.4 4.9 7.2 7 5.6 8.6l-.5.5L19.8 24 5.1 38.9 7.2 41l1.7 1.6.5.5L24 28.3l14.7 14.8.4-.5 1.7-1.6 2.1-2.1L28.2 24z" />
          </svg>
        </IconBase>
      </IconClose>
    </button>
  </Button>
</ModalDialogDismiss>
`;

exports[`test should render an open modal 1`] = `
<button
  aria-disabled="false"
  class="terra-Button terra-Button--link terra-ModalDialog-header-dismiss">
  <svg
    aria-hidden="true"
    class="terra-Icon"
    data-name="Layer 1"
    focusable="false"
    height="1em"
    viewbox="0 0 48 48"
    width="1em"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M28.2 24L42.9 9.1 40.8 7l-1.7-1.6-.4-.5L24 19.7 9.4 4.9 7.2 7 5.6 8.6l-.5.5L19.8 24 5.1 38.9 7.2 41l1.7 1.6.5.5L24 28.3l14.7 14.8.4-.5 1.7-1.6 2.1-2.1L28.2 24z" />
  </svg>
</button>
`;

exports[`test should shallow an open modal 1`] = `
<Button
  className="terra-ModalDialog-header-dismiss"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  variant="link">
  <IconClose
    data-name="Layer 1"
    viewBox="0 0 48 48"
    xmlns="http://www.w3.org/2000/svg" />
</Button>
`;
